# 1024-settlement-program

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  FINAL_STATUS.md  INTEGRATION_STATUS.md  LICENSE  README.md  README_ZH.md  SUCCESS.md  WHERE_IS_DATA.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TRADE_FIELDS.md
examples/: basic_settlement.rs  parse_settlement.rs
src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
tests/: integration_test.rs
tools/: parse_settlement.rs
