[package]
name = "settlement-program"
version = "1.0.0"
edition = "2021"
description = "1024EX Settlement Program - Complete on-chain trade data storage"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.18.26"
borsh = "0.10"
thiserror = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "=1.18.26"
solana-sdk = "=1.18.26"
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3

[features]
no-entrypoint = []

